add aws-sdk-cpp external project

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,12 @@
 link_directories(${CMAKE_BINARY_DIR}/3rd/lib)
 
-set(SERVICE_COMPONENTS s3)
-# Find the AWS SDK for C++ package.
-find_package(AWSSDK REQUIRED COMPONENTS ${SERVICE_COMPONENTS})
-
 set(INCLUDE_DIRS
   "${PROJECT_SOURCE_DIR}/src"
   "${PROJECT_SOURCE_DIR}/src/include"
 )
 
 add_library(s3file STATIC "")
+add_dependencies(s3file objstore-ext-proj benchmark-lib)
 target_sources(s3file
   PRIVATE
     "lib/local.cc"
@@ -23,13 +20,12 @@ target_sources(s3file
     "include/s3.h"
 )
 
-# Only sfs needs leveldb and protobuf's header
 target_include_directories(s3file SYSTEM PRIVATE "${INCLUDE_DIRS}")
 
 target_link_libraries(s3file
     PUBLIC
-    ${AWSSDK_LINK_LIBRARIES}
-    ${AWSSDK_PLATFORM_DEPS})
+    ${OBJSTORE_LIBRARIES}
+    ${OBJSTORE_PLATFORM_DEPS})
 
 target_link_directories(s3file
     SYSTEM PRIVATE
