--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Benchmark
 option(WITH_BENCHMARK "Build with benchmarks" ON)
 
+# Benchmark
+option(WITH_TESTS "Build with unit test" ON)
+
 # CMake Macro
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 INCLUDE(aws-sdk-cpp)
